@@ -8200,6 +8200,19 @@ set timer (0, 300, 18, timer: game over, 0, (timerflag: battle, or, timerflag: m
 				if the argument is <ref>on</ref> then enemies wait while menus are up.
 			</description>
 		</command>
+		<command id="setactivebattlepauseforanimations">
+			<canon>set active battle pause for animations (state)</canon>
+			<shortname>set active battle pause for animations</shortname>
+			<description>
+				Set the active-time battle bitset "Pause for attack animations"
+				(<p>state</p> should be <p>true</p> to pause, or <p>false</p> to not pause),
+				which specifies whether battle ready meters continue to increase while an attack
+				is animating.
+				This option is not stored in save-games,
+				so changing it only lasts until the game is quit and reloaded.
+			</description>
+		</command>
+
 		<command id="getactivebattlepauseonallmenus">
 			<canon>get active battle pause on all menus</canon>
 			<shortname>get active battle pause on all menus</shortname>
